Fix issue on title

--- a/templates/ajax/soul/refer.html.twig
+++ b/templates/ajax/soul/refer.html.twig
@@ -1,5 +1,5 @@
 {% extends "ajax/soul/shell.html.twig" %}
-{% block title %}{{'Wir werden alle sterben: Sag es weiter!'|trans({}, 'game')}}{% endblock %}
+{% block title %}{{'Wir werden alle sterben: Sag es weiter!'|trans({}, 'game')|raw}}{% endblock %}
 {% block soul_content %}
     <div class="row">
 
