Improved username CSS

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -298,7 +298,7 @@ ul.subscriptions {
       &>img { width: 90px !important; height: 30px !important; object-fit: cover }
     }
     margin-bottom: 2px;
-    .username { color: white; text-decoration: none;}
+    .username { color: white; text-decoration: none; background: none; border: none; box-shadow: none; padding: 0;}
   }
 
   &>.forum-post-header {
@@ -322,6 +322,7 @@ ul.subscriptions {
     &.header-variant-crow { background: rgba(0,0,0,0.3); }
     &.header-variant-dev { background: #006495; }
     a.link, span.link { color: white; text-decoration: none }
+    .username { color: white; text-decoration: none; background: none; border: none; box-shadow: none; padding: 0;}
   }
 
   &.forum-post-search-result>.forum-post-header {
