--- a/templates/ajax/admin/users/social.html.twig
+++ b/templates/ajax/admin/users/social.html.twig
@@ -17,7 +17,7 @@
                         <div class="row header hide-sm">
                             <div class="padded cell rw-1"></div>
                             <div class="padded cell rw-5">{{ 'Spieler'|trans({},'soul') }}</div>
-                            <div class="padded cell rw-3 hide-md">{{ 'Seelenpunkte'|trans({},'soul') }}</div>
+                            <div class="padded cell rw-5 hide-md">{{ 'Seelenpunkte'|trans({},'soul') }}</div>
                         </div>
                         {% for entry in friends|sort((a,b) => (app.user in b.friends) <=> (app.user in a.friends) ?: a.id <=> b.id) %}
                             <div class="row-flex wrap">
@@ -30,23 +30,100 @@
                                 </div>
                                 <div class="padded cell factor-0" style="flex-basis: 90px; background: url('{{ entry.avatar ? path('app_web_avatar', {'uid': entry.id, 'name': entry.avatar.smallName, 'ext': entry.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}') center/cover no-repeat"></div>
                                 <div class="padded cell factor-1">{% include 'ajax/soul/playername.html.twig' with {user: entry} only %}</div>
-                                <div class="padded cell rw-3 hide-sm hide-md">{{ entry.soulPoints }}</div>
+                                <div class="padded cell rw-5 hide-sm hide-md">{{ entry.soulPoints }}</div>
                             </div>
                         {% endfor %}
                     </div>
                 </div>
+            </div>
 
+            <div class="row">
+                {% if reverse_friends is not empty %}
+                    <div class="padded cell rw-12">
+                        <h5>{{ 'Spieler, sie sich als Freund hinzugefügt haben'|trans({},'admin') }}</h5>
+                        <div class="row-table">
+                            <div class="row header hide-sm">
+                                <div class="padded cell rw-1">&nbsp;</div>
+                                <div class="padded cell rw-5">{{ 'Spieler'|trans({},'soul') }}</div>
+                                <div class="padded cell rw-5 hide-sm hide-md">{{ 'Seelenpunkte'|trans({},'soul') }}</div>
+                            </div>
+                            {% for entry in reverse_friends %}
+                                <div class="row-flex wrap">
+                                    <div class="padded cell rw-1">&nbsp;</div>
+                                    <div class="padded cell factor-0" style="flex-basis: 90px; background: url('{{ entry.avatar ? path('app_web_avatar', {'uid': entry.id, 'name': entry.avatar.smallName, 'ext': entry.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}') center/cover no-repeat"></div>
+                                    <div class="padded cell factor-1">{{ entry.name }}</div>
+                                    <div class="padded cell rw-5 hide-sm hide-md">{{ entry.soulPoints }}</div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endif %}
             </div>
 
             <div class="row">
                 <div class="cell padded rw-12">
                     <h5>{{ 'Spieler werben'|trans({}, 'admin') }}</h5>
+                    {% if sponsored is not empty %}
+                        <div class="padded cell rw-12">
+                            <div class="row-table">
+                                <div class="row header">
+                                    <div class="padded cell rw-4">{{ 'Geworbener Spieler'|trans({},'soul') }}</div>
+                                    <div class="padded cell rw-4">{{ 'Seelenpunkte'|trans({},'soul') }}</div>
+                                    <div class="padded cell rw-4">{{ 'Heldenerfahrung'|trans({},'soul') }}</div>
+                                </div>
+                                {% for entry in sponsored %}
+                                    <div class="row">
+                                        <div class="padded cell rw-4">
+                                            <img alt="" src="{{ asset('build/images/icons/small_ghost_red.gif') }}">
+                                            {% include 'ajax/soul/playername.html.twig' with {user: entry.user} only %}
+                                        </div>
+                                        <div class="padded cell rw-4">{{ entry.user.soulPoints }}</div>
+                                        <div class="padded cell rw-4">{{ entry.user.heroDaysSpent }}</div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
 
             <div class="row">
                 <div class="cell padded rw-12">
                     <h5>{{ 'Blockierliste'|trans({}, 'admin') }}</h5>
+                    {% if blocked is not empty %}
+                        <div class="padded cell rw-12">
+                            <div class="row-table">
+                                <div class="row header">
+                                    <div class="padded cell rw-12">{{ 'Blockierter Spieler'|trans({},'soul') }}</div>
+                                </div>
+                                {% for entry in blocked %}
+                                    <div class="row">
+                                        <div class="padded cell rw-12">
+                                            <img alt="" src="{{ asset('build/images/icons/small_ghost_red.gif') }}">
+                                            {% include 'ajax/soul/playername.html.twig' with {user: entry.related} only %}
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
+                    {% if blockers is not empty %}
+                        <div class="padded cell rw-12">
+                            <div class="row-table">
+                                <div class="row header">
+                                    <div class="padded cell rw-12">Blocked by</div>
+                                </div>
+                                {% for entry in blockers %}
+                                    <div class="row">
+                                        <div class="padded cell rw-12">
+                                            <img alt="" src="{{ asset('build/images/icons/small_ghost_red.gif') }}">
+                                            {% include 'ajax/soul/playername.html.twig' with {user: entry.related} only %}
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
