--- a/templates/ajax/admin/users/social.html.twig
+++ b/templates/ajax/admin/users/social.html.twig
@@ -111,7 +111,7 @@
                         <div class="padded cell rw-12">
                             <div class="row-table">
                                 <div class="row header">
-                                    <div class="padded cell rw-12">Blocked by</div>
+                                    <div class="padded cell rw-12">{{ 'Blockiert von'|trans({}, 'admin') }}</div>
                                 </div>
                                 {% for entry in blockers %}
                                     <div class="row">
