Fix omniscience display (issue #1834)

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -68,6 +68,7 @@ button {
 }
 
 .content-center-vertical { display: flex; align-items: center; }
+.content-center-horizontal {display: flex; justify-content: center; }
 
 .pad { padding: 5px; }
 
