--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1702,6 +1702,14 @@ i.dagger {
   margin-bottom: 2em;
 }
 
+.ml-1 {
+  margin-left: 1em;
+}
+
+.pl-1 {
+  padding-left: 1em;
+}
+
 .inline-block {
   display: inline-block;
 }
