--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -534,7 +534,7 @@ div#user-tooltip {
     div.link-blocks {
         margin-top: 10px;
         text-align: center;
-        div.link-block {
+        .link-block {
             background-color: #79432b;
             color: #f0d79e;
             margin: 0 1px 1px 0;
@@ -548,6 +548,13 @@ div#user-tooltip {
             overflow: hidden;
             font-weight: bold;
             border-radius: 2px;
+            text-decoration: none;
+            &:hover {
+                background-color: #996739;
+                color: white;
+                cursor: pointer;
+            }
+
             img {
                 width: 16px;
                 height: 16px;
@@ -555,9 +562,6 @@ div#user-tooltip {
             &.empty {
                 border: 1px dashed #ddab76;
                 background: none;
-            }
-            a {
-                text-decoration: none;
             }
         }
     }
@@ -581,6 +585,9 @@ div#user-tooltip {
 
     div.user-infos {
         color: #f0d79e;
+        img {
+            height: 16px;
+        }
     }
 
     div.userDesc {
