--- a/templates/ajax/admin/users/social.html.twig
+++ b/templates/ajax/admin/users/social.html.twig
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="padded cell factor-0" style="flex-basis: 90px; background: url('{{ entry.avatar ? path('app_web_avatar', {'uid': entry.id, 'name': entry.avatar.smallName, 'ext': entry.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}') center/cover no-repeat"></div>
                                 <div class="padded cell factor-1">{% include 'ajax/soul/playername.html.twig' with {user: entry} only %}</div>
-                                <div class="padded cell rw-5 hide-sm hide-md">{{ entry.soulPoints }}</div>
+                                <div class="padded cell rw-5 hide-sm hide-md">{{ entry.allSoulPoints }}</div>
                             </div>
                         {% endfor %}
                     </div>
@@ -52,7 +52,7 @@
                                     <div class="padded cell rw-1">&nbsp;</div>
                                     <div class="padded cell factor-0" style="flex-basis: 90px; background: url('{{ entry.avatar ? path('app_web_avatar', {'uid': entry.id, 'name': entry.avatar.smallName, 'ext': entry.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}') center/cover no-repeat"></div>
                                     <div class="padded cell factor-1">{{ entry.name }}</div>
-                                    <div class="padded cell rw-5 hide-sm hide-md">{{ entry.soulPoints }}</div>
+                                    <div class="padded cell rw-5 hide-sm hide-md">{{ entry.allSoulPoints }}</div>
                                 </div>
                             {% endfor %}
                         </div>
@@ -77,7 +77,7 @@
                                             <img alt="" src="{{ asset('build/images/icons/small_ghost_red.gif') }}">
                                             {% include 'ajax/soul/playername.html.twig' with {user: entry.user} only %}
                                         </div>
-                                        <div class="padded cell rw-4">{{ entry.user.soulPoints }}</div>
+                                        <div class="padded cell rw-4">{{ entry.user.allSoulPoints }}</div>
                                         <div class="padded cell rw-4">{{ entry.user.heroDaysSpent }}</div>
                                     </div>
                                 {% endfor %}
