Fix #1836 in a better way

--- a/templates/ajax/soul/refer.html.twig
+++ b/templates/ajax/soul/refer.html.twig
@@ -263,7 +263,7 @@
                         </div>
                     {% else %}
                         <div class="padded cell rw-12">
-                            {{ 'Deine Blockierliste ist leer.'|trans({}, 'soul') }}
+                            <div class="small center">{{ 'Deine Blockierliste ist leer.'|trans({}, 'soul') }}</div>
                         </div>
                     {% endif %}
                 </div>
