--- a/templates/ajax/admin/users/social.html.twig
+++ b/templates/ajax/admin/users/social.html.twig
@@ -47,7 +47,7 @@
                                 <div class="padded cell rw-5">{{ 'Spieler'|trans({},'soul') }}</div>
                                 <div class="padded cell rw-5 hide-sm hide-md">{{ 'Seelenpunkte'|trans({},'soul') }}</div>
                             </div>
-                            {% for entry in reverse_friends %}
+                            {% for entry in reverse_friends|sort((a, b) => a.name <=> b.name) %}
                                 <div class="row-flex wrap">
                                     <div class="padded cell rw-1">&nbsp;</div>
                                     <div class="padded cell factor-0" style="flex-basis: 90px; background: url('{{ entry.avatar ? path('app_web_avatar', {'uid': entry.id, 'name': entry.avatar.smallName, 'ext': entry.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}') center/cover no-repeat"></div>
