Fix #1839 and translation

--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -51,8 +51,7 @@
                     <div class="tooltip normal">
                         <b>{{ 'Verbannt'|trans({},'game') }}</b><br />
                         {% trans from 'game' %}
-                            Deine Stadt hat entschieden, dich zu verbannen. Einige Aktionen stehen dir nicht länger zur
-                            Verfügung.
+                            Deine Stadt hat entschieden, dich zu verbannen. Einige Aktionen stehen dir nicht länger zur Verfügung.
                         {% endtrans %}
                     </div>
                 </li>
