--- a/templates/ajax/game/jobs.html.twig
+++ b/templates/ajax/game/jobs.html.twig
@@ -3,8 +3,7 @@
 {% block jobhelp %}
     <div class="help">
         <p>{% trans from 'game' %}
-                Je nachdem, welchen Beruf du auswählst, stehen dir unterschiedliche Aktionen und Spielweisen in
-                dieser Stadt zur Verfügung.
+                Je nachdem, welchen Beruf du auswählst, stehen dir unterschiedliche Aktionen und Spielweisen in dieser Stadt zur Verfügung.
             {% endtrans %}</p>
         {# <p>{% trans with { '{hero}': '<b><img alt="" src="' ~ asset('build/images/professions/hero.gif') ~ '"> ' ~ 'Held'|trans({},'game') ~ '</b>' } from 'game'  %}
                 Spielst du als {hero}, wird dir täglich ein Heldentag abgezogen. Gehen dir die Heldentage in der
