--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -517,11 +517,11 @@
                     Du kannst die Widerstandsfähigkeit deines Hauses verbessern, indem du es ausbaust.
                 {% endtrans %}
                 <br /><br />
-                {% if not home.prototype.allowSubUpgrades %}
+                {# {% if not home.prototype.allowSubUpgrades %} #}
                     {% trans from 'game' %}
                         Mit der ersten Verbesserungstufe bekommst du die Möglichkeit private Bauarbeiten durchführen zu können.
                     {% endtrans %}
-                {% endif %}
+                {# {% endif %} #}
             </div>
 
             {% if town.devastated %}
