--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -80,6 +80,10 @@
     }
   }
 
+  .username {
+    font-size: 1.25rem;
+  }
+
   & blockquote .quoteauthor { margin-left: 0 !important; }
 
   ul,ol {clear:left;}
