--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1769,7 +1769,9 @@ span.tag {
   padding-left: 5px;
   color: @myhordes-button-color;
   font-weight: bold;
-  box-shadow: 0px 0px 1px black;
+  box-shadow: 0 0 1px black;
+  display: inline-block;
+  cursor: pointer;
 
   &:hover {
     border-top: 1px solid #490000;
