Keep the 'fake' username on a quote tag if the user doesn't exist

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -69,12 +69,11 @@
     font-weight: bold;
     font-size: 1.25rem; 
     text-decoration: none;
-    background-color: #5C0000 !important;
-    border-top: 1px solid #98341c !important;
-    border-radius: 4px !important;
-    padding-right: 5px !important;
-    padding-left: 5px !important;
-    color: #f0d79e !important;
+
+    &.raw {
+      color: white;
+    }
+
     &.quoteauthor + blockquote {
       margin-top: 0;
     }
